add product list, in this case cadles.

--- a/index.html
+++ b/index.html
@@ -13,21 +13,48 @@
 	<title>Candle Empourium</title>
 </head>
 <body>
-    <header id="home" class="">
-        <div class="">
+    <header id="home" class="home-page-header">
+        <div class="center">
         <h1>Welcome to _________!</h1>
         <p>Making your home cozy once more.</p>
         </div>
     </header>
 
-    <nav>
+    <nav class="navigation-bar text-uppercase text-center">
         <a href="#home" aria-label="Top of the page"></a>
         <a href="#candles" aria-label="Go to the candle product list"></a>
         <a href="#waxMelts" aria-label="Go to wax melt list"></a>
-        <a href="#contact" aria-label=""></a>
-        <a href="#orderForm" aria-label=""></a>
+        <a href="#contact" aria-label="Go to contact us page"></a>
+        <a href="#orderForm" aria-label="Go to order order form"></a>
     </nav>
 
-   
-    
+    <section>
+        <div>
+            <h2>Large Candles</h2>
+            <ul>
+                <li>Chocolate Orange £20 </li>
+                <li>Blieberry Vanilla</li>
+                <li>Salted Caramel</li>
+                <li>Apple Spice</li>
+            </ul>
+        </div>
+        <div>
+            <h2>Medium Candles £15.50 </h2>
+            <ul>
+                <li>Chocolate Orange</li>
+                <li>Blieberry Vanilla</li>
+                <li>Salted Caramel</li>
+                <li>Apple Spice</li>
+            </ul>
+        </div>
+        <div>
+            <h2> Small Candles £5 </h2>
+                <ul>
+                    <li>Chocolate Orange</li>
+                    <li>Blieberry Vanilla</li>
+                    <li>Salted Caramel</li>
+                    <li>Apple Spice</li>
+                </ul>
+        </div>
+    </section>
 </body>
