add class to list divs

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
 
     <section>
-        <div>
+        <div id="large-candle-box" class="">
             <h2>Large Candles</h2>
             <ul>
                 <li>Chocolate Orange £20 </li>
@@ -38,7 +38,7 @@
                 <li>Apple Spice</li>
             </ul>
         </div>
-        <div>
+        <div id="medium-candle-box" class="">
             <h2>Medium Candles £15.50 </h2>
             <ul>
                 <li>Chocolate Orange</li>
@@ -47,7 +47,7 @@
                 <li>Apple Spice</li>
             </ul>
         </div>
-        <div>
+        <div id="small-candle-box" class="">
             <h2> Small Candles £5 </h2>
                 <ul>
                     <li>Chocolate Orange</li>
