open times added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="#orderForm" aria-label="Go to order order form"></a>
     </nav>
 
-    <section>
+    <section id="candle-list" class="text-center">
         <div id="large-candle-box" class="large-candles">
             <h2>Large Candles</h2>
             <ul>
@@ -55,6 +55,30 @@
                     <li>Salted Caramel</li>
                     <li>Apple Spice</li>
                 </ul>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Infomation</h2>
+        <div id="contact-box">
+            <h2>Opening Times</h2>
+            <table class="text-center">
+                <tr>
+                    <th></th>
+                    <th>Open:</th>
+                    <th>Close:</th>
+                </tr>
+                <tr>
+                    <th>Mon - Fri</th>
+                    <th>10am</th>
+                    <th>7.30pm</th>
+                </tr>
+                <tr>
+                    <th>Sat - Sun</th>
+                    <th>8am</th>
+                    <th>4.30pm</th>
+                </tr>
+            </table>
         </div>
     </section>
 </body>
