" corrected spelling mistakes."

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <a href="#orderForm" aria-label="Go to order order form"></a>
     </nav>
 
-    <section id="candle-list" class="text-center">
+    <section id="candle-list" class="text-center candles">
         <div id="large-candle-box" class="large-candles">
             <h2>Large Candles</h2>
             <ul>
                 <li>Chocolate Orange £20 </li>
-                <li>Blieberry Vanilla</li>
+                <li>Blueberry Vanilla</li>
                 <li>Salted Caramel</li>
                 <li>Apple Spice</li>
             </ul>
@@ -42,7 +42,7 @@
             <h2>Medium Candles £15.50 </h2>
             <ul>
                 <li>Chocolate Orange</li>
-                <li>Blieberry Vanilla</li>
+                <li>Blueberry Vanilla</li>
                 <li>Salted Caramel</li>
                 <li>Apple Spice</li>
             </ul>
@@ -51,7 +51,7 @@
             <h2> Small Candles £5 </h2>
                 <ul>
                     <li>Chocolate Orange</li>
-                    <li>Blieberry Vanilla</li>
+                    <li>Blueberry Vanilla</li>
                     <li>Salted Caramel</li>
                     <li>Apple Spice</li>
                 </ul>
