add contact us and footer section

--- a/index.html
+++ b/index.html
@@ -80,5 +80,20 @@
                 </tr>
             </table>
         </div>
+        <div class="address-box-center">
+            <h3>Address</h3>
+            <p>Candle Empourium,<br>32 Candle Street,<br>UK,<br>London N9</p>
+        </div>
     </section>
+
+    <footer class="text-uppercase">
+        <span>Find us on:</span>
+        <a href="" target="_blank" aria-label=" (link opens in new tab.)">Etzy</a>
+        <a href="" target="_blank" aria-label=" (link opens in new tab.)">Amazon</a>
+        <a href="" target="_blank" aria-label=" (link opens in new tab.)">Instagram</a>
+
+        <p>copyright © Candle Empourium 2021</p>
+    
+    </footer>
+
 </body>
