Keeping work up to date.

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     </header>
 
     <nav class="navigation-bar text-uppercase text-center">
-        <a href="#home" aria-label="Top of the page"></a>
-        <a href="#candles" aria-label="Go to the candle product list"></a>
-        <a href="#waxMelts" aria-label="Go to wax melt list"></a>
-        <a href="#contact" aria-label="Go to contact us page"></a>
-        <a href="#orderForm" aria-label="Go to order order form"></a>
+        <a href="#home" aria-label="Top of the page">Home</a>
+        <a href="#candles" aria-label="Go to the candle product list">Candles</a>
+        <a href="#waxMelts" aria-label="Go to wax melt list">WaxMelts</a>
+        <a href="#contact" aria-label="Go to contact us page">Contact Us</a>
+        <a href="#orderForm" aria-label="Go to order order form">Order Form</a>
     </nav>
 
     <section id="candle-list" class="text-center candles">
-        <div id="large-candle-box" class="large-candles">
+        <div id="large-candle-box" class="large-candles box1">
             <h2>Large Candles</h2>
             <ul>
                 <li>Chocolate Orange £20 </li>
@@ -38,7 +38,13 @@
                 <li>Apple Spice</li>
             </ul>
         </div>
-        <div id="medium-candle-box" class="medium-candles">
+        <div class="box1 large-candle-images">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+
+        <div id="medium-candle-box" class="medium-candles box2">
             <h2>Medium Candles £15.50 </h2>
             <ul>
                 <li>Chocolate Orange</li>
@@ -46,6 +52,11 @@
                 <li>Salted Caramel</li>
                 <li>Apple Spice</li>
             </ul>
+        </div>
+        <div class="box2 medium-candle-box">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
         </div>
         <div id="small-candle-box" class="small-candles">
             <h2> Small Candles £5 </h2>
