--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
     <section id="candle-list" class="text-center candles">
         <div id="large-candle-box" class="large-candles box1">
-            <h2>Large Candles</h2>
+            <h2>Large Candles £20</h2>
             <ul>
-                <li>Chocolate Orange £20 </li>
+                <li>Chocolate Orange</li>
                 <li>Blueberry Vanilla</li>
                 <li>Salted Caramel</li>
                 <li>Apple Spice</li>
