--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header id="home" class="home-page-header">
         <div class="center">
-        <h1>Welcome to _________!</h1>
+        <h1>Welcome to the Candle Empourioum!</h1>
         <p>Making your home cozy once more.</p>
         </div>
     </header>
