edited a bit of css to center some stuff

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <section id="contact">
         <h2>Contact Infomation</h2>
-        <div id="contact-box">
+        <div id="contactBox">
             <h2>Opening Times</h2>
             <table class="text-center">
                 <tr>
